<resources>
    <string name="app_name">POCRoom</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation panel -->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_templates">Templates</string>
    <string name="nav_incomplete">Incomplete</string>
    <string name="nav_complete">Complete</string>
    <string name="nav_history">History</string>
    <string name="nav_synchronization">Synchronization</string>
    <string name="nav_my_audit">My Audits</string>
    <string name="nav_my_tasks">My Tasks</string>
    <string name="nav_my_account">My Account</string>
</resources>
